objects/Title_Review__c.object
<CustomObject>
    <description>Review for Digital Titles</description>
    <fields>
        <fullName>ACV_Titles_External_Id__c</fullName>
        <description>Title External Id (from backend)</description>
        <formula>Title__r.Case__r.ACV_Titles_External_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Title External Id (from backend)</inlineHelpText>
        <label>ACV Titles External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commit_Pending__c</fullName>
        <defaultValue>true</defaultValue>
        <description>True means, this review record has not been updated in the backend/frontend (Title Hub) i.e. the commit is still pending in the backend. Once the backend is updated, it will send an update event with Commit_Pending=false, which means that the backend is up-to-date with salesforce and there is no commit pending.</description>
        <inlineHelpText>True means, this review record has not been updated in the backend/frontend (Title Hub) i.e. the commit is still pending in the backend. Once the backend is updated, it will send an update event with Commit_Pending=false, which means that the backend is up-to-date with salesforce and there is no commit pending.</inlineHelpText>
        <label>Commit Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Review of this Title.</description>
        <inlineHelpText>Review of this Title.</inlineHelpText>
        <label>Title</label>
        <referenceTo>Title__c</referenceTo>
        <relationshipLabel>Title Reviews</relationshipLabel>
        <relationshipName>Title_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Title Review</label>
    <nameField>
        <label>Title Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Title Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>